<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".Create_account">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="@drawable/cc"
            tools:background="@drawable/cc">

            <TextView
                android:id="@+id/textMoreText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/alike"
                android:text="@string/textPhone"
                android:textAlignment="viewStart"
                android:textColor="@android:color/background_light"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/TextVerifyphone" />

            <TextView
                android:id="@+id/TextVerifyphone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/verify_phone"
                android:textAlignment="center"
                android:textColor="@android:color/background_light"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.dpizarro.pinview.library.PinView
                android:id="@+id/pinView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.273" />

            <Button
                android:id="@+id/Cc_button"
                android:layout_width="136dp"
                android:layout_height="53dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:background="@color/colorwhite"
                android:fontFamily="@font/cantata_one"
                android:text="@string/confirm_code"
                android:textAlignment="viewStart"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent"
                android:textSize="18sp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/pinView1"
                app:layout_constraintHorizontal_bias="0.064"
                app:layout_constraintStart_toStartOf="@+id/pinView1"
                app:layout_constraintTop_toBottomOf="@+id/pinView1"
                app:layout_constraintVertical_bias="0.0" />

            <Button
                android:id="@+id/Force_resend1"
                android:layout_width="153dp"
                android:layout_height="53dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:background="@color/colorwhite"
                android:fontFamily="@font/cantata_one"
                android:text="@string/resend_code"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/pinView1"
                app:layout_constraintHorizontal_bias="0.904"
                app:layout_constraintStart_toStartOf="@+id/pinView1"
                app:layout_constraintTop_toBottomOf="@+id/pinView1"
                app:layout_constraintVertical_bias="0.0" />


        </android.support.constraint.ConstraintLayout>

        <com.hbb20.CountryCodePicker
            android:id="@+id/phoneauthpicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="108dp"
            android:layout_marginTop="192dp"
            app:ccp_defaultPhoneCode="92"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.104"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />

        <EditText
            android:id="@+id/phoneauthtext"
            android:layout_width="278dp"
            android:layout_height="46dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/phone_number"
            android:inputType="textPersonName"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/floatingActionButton1"
            app:layout_constraintHorizontal_bias="0.38"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phoneauthpicker"
            app:layout_constraintVertical_bias="1.0" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/floatingActionButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="28dp"
            android:clickable="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phoneauthpicker"
            app:srcCompat="@drawable/ic_chevron_right_black_24dp"
            android:focusable="true" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>